Style for Switch

--- a/app/src/main/res/drawable/thumb.xml
+++ b/app/src/main/res/drawable/thumb.xml
@@ -2,10 +2,10 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:state_checked="false"
-        android:drawable="@drawable/nightyy"/>
+        android:drawable="@drawable/thumbfalse"/>
 
     <item android:state_checked="true"
-        android:drawable="@drawable/day_mode"/>
+        android:drawable="@drawable/thumbtrue"/>
 
 </selector>
 
