--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,16 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
 
+    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_700">#FF3700B3</color>
+    <color name="teal_200">#03DAC5</color>
+    <color name="white">#FFFFF</color>
+    <color name="grey">#aaa</color>
+    <color name="lavender">#FFBB86FC</color>
+    <color name="darkgrey">#ff424242</color>
+
+
+
 
 </resources>
