--- a/app/src/main/res/drawable/thumbfalse.xml
+++ b/app/src/main/res/drawable/thumbfalse.xml
@@ -5,13 +5,14 @@
         <shape
             android:shape="oval">
             <solid
-                android:color="@color/white"></solid>
+                android:color="@color/white">
+
+            </solid>
             <size android:height="8dp"
-                android:width="8dp"
-                ></size>
+                android:width="8dp" />
             <stroke
                 android:width="1dp"
-                android:color="@color/lavender"></stroke>
+                android:color="@color/lavender"/>
 
         </shape>
 
