--- a/app/src/main/res/layout/item_article_preview.xml
+++ b/app/src/main/res/layout/item_article_preview.xml
@@ -28,7 +28,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:text="Title"
-            android:textColor="@android:color/black"
+            android:textColor="?attr/text_color"
             android:textSize="14sp"
             android:textStyle="bold" />
 
