--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#03DAC5</color>
-    <color name="white">#FFFFF</color>
+    <color name="white">#FFFF</color>
     <color name="grey">#aaa</color>
     <color name="lavender">#FFBB86FC</color>
     <color name="darkgrey">#ff424242</color>
