--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -10,6 +10,7 @@
         android:id="@+id/flFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
+
         app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,18 +36,22 @@
         app:layout_constraintTop_toBottomOf="@+id/switchtheme"
         app:menu="@menu/bottom_navigation_menu" />
 
-    <androidx.appcompat.widget.SwitchCompat
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/switchtheme"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
-        android:layout_marginTop="22dp"
-
+        android:layout_marginStart="324dp"
+        android:layout_marginTop="2dp"
         android:layout_marginBottom="669dp"
-        android:thumb="@drawable/thumb"
+        android:backgroundTint="@android:color/transparent"
+        android:elevation="11dp"
+        android:src="@drawable/thumbtrue"
+        app:fabSize="mini"
         app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
         app:layout_constraintStart_toStartOf="@+id/flFragment"
         app:layout_constraintTop_toTopOf="parent"
-        app:track="@drawable/track" />
+        app:maxImageSize="40dp"
+
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
