--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -2,15 +2,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:id="@+id/breakingNewsFragment"
-        android:title="Breaking News"
+        android:title="@string/homefreg"
         android:icon="@drawable/ic_breaking_news" />
 
     <item android:id="@+id/savedNewsFragment"
-        android:title="Saved News"
+        android:title="@string/saved"
         android:icon="@drawable/ic_favorite" />
 
     <item android:id="@+id/searchNewsFragment"
-        android:title="Search News"
-        android:icon="@drawable/ic_all_news" />
+        android:title="@string/search"
+        android:icon="@drawable/baseline_search_24" />
 
 </menu>
