--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -46,8 +46,8 @@
         android:layout_gravity="bottom|end"
         android:layout_marginBottom="150dp"
         android:layout_marginRight="15dp"
-
-        app:maxImageSize="56dp" />
+        app:maxImageSize="56dp"
+        />
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatingthemeswitch"
         android:layout_width="wrap_content"
