--- a/app/src/main/res/layout/item_article_preview.xml
+++ b/app/src/main/res/layout/item_article_preview.xml
@@ -55,6 +55,7 @@
                 android:layout_gravity="center"
                 android:layout_marginRight="10dp"
                 android:layout_weight="1"
+                android:textColor="@android:color/holo_red_dark"
                 android:text="Author" />
 
             <TextView
@@ -63,6 +64,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginRight="10dp"
+                android:textColor="@color/grey"
                 android:padding="5dp"
                 android:text="Date-Time" />
         </LinearLayout>
