--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -42,11 +42,12 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@android:color/white"
         android:elevation="11dp"
-        android:src="@drawable/baseline_language_24"
+        android:src="@drawable/toarabic"
         android:layout_gravity="bottom|end"
         android:layout_marginBottom="150dp"
         android:layout_marginRight="15dp"
-        app:maxImageSize="56dp"
+        android:layout_marginLeft="15dp"
+        app:maxImageSize="48dp"
         />
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatingthemeswitch"
@@ -55,6 +56,7 @@
         android:backgroundTint="@android:color/transparent"
         android:elevation="11dp"
         android:src="@drawable/thumbtrue"
+        android:layout_marginLeft="15dp"
         android:layout_gravity="bottom|end"
         android:layout_marginBottom="76dp"
         android:layout_marginRight="15dp"
