--- a/app/src/main/res/layout/item_article_preview.xml
+++ b/app/src/main/res/layout/item_article_preview.xml
@@ -35,7 +35,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+
+           >
 
             <ImageView
                 android:id="@+id/imageView2"
@@ -53,10 +55,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginRight="10dp"
+                android:textDirection="locale"
                 android:layout_weight="1"
                 android:textColor="@android:color/holo_red_dark"
                 android:text="Author" />
+
 
             <TextView
                 android:id="@+id/tvPublishedAt"
