--- a/app/src/main/res/layout/fragment_article.xml
+++ b/app/src/main/res/layout/fragment_article.xml
@@ -77,7 +77,7 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/floatingActionButton"
+                android:id="@+id/floatingWebBrowser"
                 android:layout_width="76dp"
                 android:layout_height="46dp"
                 android:layout_marginLeft="10dp"
